tests/ui/on-unimplemented/multiple-impls.stderr
error[E0277]: the trait bound `[i32]: Index<u32>` is not satisfied
  --> $DIR/multiple-impls.rs:33:33
   |
LL |     Index::index(&[] as &[i32], 2u32);
   |     ------------                ^^^^ trait message
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Index<u32>` is not implemented for `[i32]`
   = help: the following other types implement trait `Index<Idx>`:
             <[i32] as Index<Foo<usize>>>
             <[i32] as Index<Bar<usize>>>

error[E0277]: the trait bound `[i32]: Index<u32>` is not satisfied
  --> $DIR/multiple-impls.rs:33:5
   |
LL |     Index::index(&[] as &[i32], 2u32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ trait message
   |
   = help: the trait `Index<u32>` is not implemented for `[i32]`
   = help: the following other types implement trait `Index<Idx>`:
             <[i32] as Index<Foo<usize>>>
             <[i32] as Index<Bar<usize>>>

error[E0277]: the trait bound `[i32]: Index<Foo<u32>>` is not satisfied
  --> $DIR/multiple-impls.rs:37:33
   |
LL |     Index::index(&[] as &[i32], Foo(2u32));
   |     ------------                ^^^^^^^^^ on impl for Foo
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Index<Foo<u32>>` is not implemented for `[i32]`
   = help: the following other types implement trait `Index<Idx>`:
             <[i32] as Index<Foo<usize>>>
             <[i32] as Index<Bar<usize>>>

error[E0277]: the trait bound `[i32]: Index<Foo<u32>>` is not satisfied
  --> $DIR/multiple-impls.rs:37:5
   |
LL |     Index::index(&[] as &[i32], Foo(2u32));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ on impl for Foo
   |
   = help: the trait `Index<Foo<u32>>` is not implemented for `[i32]`
   = help: the following other types implement trait `Index<Idx>`:
             <[i32] as Index<Foo<usize>>>
             <[i32] as Index<Bar<usize>>>

error[E0277]: the trait bound `[i32]: Index<Bar<u32>>` is not satisfied
  --> $DIR/multiple-impls.rs:41:33
   |
LL |     Index::index(&[] as &[i32], Bar(2u32));
   |     ------------                ^^^^^^^^^ on impl for Bar
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Index<Bar<u32>>` is not implemented for `[i32]`
   = help: the following other types implement trait `Index<Idx>`:
             <[i32] as Index<Foo<usize>>>
             <[i32] as Index<Bar<usize>>>

error[E0277]: the trait bound `[i32]: Index<Bar<u32>>` is not satisfied
  --> $DIR/multiple-impls.rs:41:5
   |
LL |     Index::index(&[] as &[i32], Bar(2u32));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ on impl for Bar
   |
   = help: the trait `Index<Bar<u32>>` is not implemented for `[i32]`
   = help: the following other types implement trait `Index<Idx>`:
             <[i32] as Index<Foo<usize>>>
             <[i32] as Index<Bar<usize>>>

error[E0277]: the trait bound `[i32]: Index<u32>` is not satisfied
  --> $DIR/multiple-impls.rs:33:5
   |
LL |     Index::index(&[] as &[i32], 2u32);
   |     ^^^^^^^^^^^^ trait message
   |
   = help: the trait `Index<u32>` is not implemented for `[i32]`
   = help: the following other types implement trait `Index<Idx>`:
             <[i32] as Index<Foo<usize>>>
             <[i32] as Index<Bar<usize>>>

error[E0277]: the trait bound `[i32]: Index<Foo<u32>>` is not satisfied
  --> $DIR/multiple-impls.rs:37:5
   |
LL |     Index::index(&[] as &[i32], Foo(2u32));
   |     ^^^^^^^^^^^^ on impl for Foo
   |
   = help: the trait `Index<Foo<u32>>` is not implemented for `[i32]`
   = help: the following other types implement trait `Index<Idx>`:
             <[i32] as Index<Foo<usize>>>
             <[i32] as Index<Bar<usize>>>

error[E0277]: the trait bound `[i32]: Index<Bar<u32>>` is not satisfied
  --> $DIR/multiple-impls.rs:41:5
   |
LL |     Index::index(&[] as &[i32], Bar(2u32));
   |     ^^^^^^^^^^^^ on impl for Bar
   |
   = help: the trait `Index<Bar<u32>>` is not implemented for `[i32]`
   = help: the following other types implement trait `Index<Idx>`:
             <[i32] as Index<Foo<usize>>>
             <[i32] as Index<Bar<usize>>>

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0277`.
